k8s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-web-svc
  namespace: go-web-app
spec:
  selector:
    app: go-web-app
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
