k8s/Ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app-ingress
  namespace: go-web-app
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.youtube-academy.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-svc
            port:
              number: 80
